feat: add jchunk core to semantic module

--- a/jchunk-semantic/pom.xml
+++ b/jchunk-semantic/pom.xml
@@ -10,6 +10,23 @@
     </parent>
 
     <artifactId>jchunk-semantic</artifactId>
+    <packaging>jar</packaging>
+    <name>JChunk - Semantic Chunker</name>
+    <description>Semantic Chunker for Java</description>
+    <url>https://github.com/PabloSanchi/jchunk</url>
 
+    <scm>
+        <url>https://github.com/PabloSanchi/jchunk</url>
+        <connection>git://github.com/PabloSanchi/jchunk.git</connection>
+        <developerConnection>git@github.com:PabloSanchi/jchunk.git</developerConnection>
+    </scm>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.PabloSanchi</groupId>
+            <artifactId>jchunk-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
