feat: add testing dependency

--- a/jchunk-semantic/pom.xml
+++ b/jchunk-semantic/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>spring-ai-transformers</artifactId>
         </dependency>
 
+        <!-- test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
