--- a/jchunk-semantic/pom.xml
+++ b/jchunk-semantic/pom.xml
@@ -39,7 +39,7 @@
             <artifactId>spring-ai-bom</artifactId>
             <version>${spring-ai.version}</version>
             <type>pom</type>
-            <scope>import</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
