--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,12 @@
 			<dependency>
 				<groupId>org.springframework.ai</groupId>
 				<artifactId>spring-ai-core</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${spring-ai.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.ai</groupId>
 				<artifactId>spring-ai-transformers</artifactId>
-				<version>1.0.0-SNAPSHOT</version>
+				<version>${spring-ai.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
