fix: dependency mamangement

--- a/jchunk-semantic/pom.xml
+++ b/jchunk-semantic/pom.xml
@@ -36,18 +36,13 @@
         <!-- spring ai dependencies -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-bom</artifactId>
-            <version>${spring-ai.version}</version>
-            <type>pom</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-core</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-transformers</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <!-- test -->
