--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,9 +2,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "releases/*" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "releases/*" ]
 
 jobs:
   build:
