chore: maven release

--- a/jchunk-core/pom.xml
+++ b/jchunk-core/pom.xml
@@ -16,9 +16,9 @@
     <url>https://github.com/PabloSanchi/jchunk</url>
 
     <scm>
+        <connection>scm:git:git://github.com/PabloSanchi/jchunk.git</connection>
+        <developerConnection>scm:git:git@github.com:PabloSanchi/jchunk.git</developerConnection>
         <url>https://github.com/PabloSanchi/jchunk</url>
-        <connection>git://github.com/PabloSanchi/jchunk.git</connection>
-        <developerConnection>git@github.com:PabloSanchi/jchunk.git</developerConnection>
     </scm>
 
 </project>
