--- a/jchunk-fixed/pom.xml
+++ b/jchunk-fixed/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.PabloSanchi</groupId>
         <artifactId>jchunk</artifactId>
-        <version>0.0.0-SNAPSHOT</version>
+        <version>0.0.0</version>
     </parent>
 
     <artifactId>jchunk-fixed</artifactId>
@@ -19,7 +17,8 @@
         <connection>scm:git:git://github.com/PabloSanchi/jchunk.git</connection>
         <developerConnection>scm:git:git@github.com:PabloSanchi/jchunk.git</developerConnection>
         <url>https://github.com/PabloSanchi/jchunk</url>
-    </scm>
+      <tag>v0.0.0</tag>
+  </scm>
 
     <dependencies>
         <dependency>
