--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.PabloSanchi</groupId>
@@ -24,7 +23,8 @@
 		<connection>scm:git:git://github.com/PabloSanchi/jchunk.git</connection>
 		<developerConnection>scm:git:git@github.com:PabloSanchi/jchunk.git</developerConnection>
 		<url>https://github.com/PabloSanchi/jchunk</url>
-	</scm>
+	  <tag>v0.0.0</tag>
+  </scm>
 
 	<issueManagement>
 		<system>Github Issues</system>
@@ -149,8 +149,8 @@
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<pushChanges>true</pushChanges>
-					<releaseVersionPolicy>incremental</releaseVersionPolicy>
-					<developmentVersionPolicy>incremental</developmentVersionPolicy>
+					<preparationGoals>clean install</preparationGoals>
+					<goals>deploy</goals>
 				</configuration>
 			</plugin>
 			<plugin>
