--- a/jchunk-recursive-character/pom.xml
+++ b/jchunk-recursive-character/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.PabloSanchi</groupId>
         <artifactId>jchunk</artifactId>
-        <version>0.0.0</version>
+        <version>0.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>jchunk-recursive-character</artifactId>
