--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Ensures full Git history for Maven release plugin
 
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -28,14 +30,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven
 
-      - name: Configure Git
+      - name: Configure Git with Token
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.RELEASE_TOKEN }}@github.com/PabloSanchi/jchunk.git
 
       - name: Run Maven Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mvn release:prepare -B
           mvn release:perform -B
