--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.PabloSanchi</groupId>
 	<artifactId>jchunk</artifactId>
-	<version>0.0.0-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<url>https://github.com/PabloSanchi/text-chunker-module.git</url>
@@ -23,7 +23,7 @@
 		<connection>scm:git:git://github.com/PabloSanchi/jchunk.git</connection>
 		<developerConnection>scm:git:git@github.com:PabloSanchi/jchunk.git</developerConnection>
 		<url>https://github.com/PabloSanchi/jchunk</url>
-	  <tag>v0.0.0</tag>
+	  	<tag>v0.0.0</tag>
   </scm>
 
 	<issueManagement>
@@ -149,8 +149,8 @@
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<pushChanges>true</pushChanges>
-					<preparationGoals>clean install</preparationGoals>
-					<goals>deploy</goals>
+					<preparationGoals>clean verify</preparationGoals>
+					<goals>none</goals>
 				</configuration>
 			</plugin>
 			<plugin>
