--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,15 @@ name: Maven Release
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - '*'
 
 jobs:
   release:
+    if: "!contains(github.event.head_commit.message, '[maven-release-plugin]')"
     runs-on: ubuntu-latest
 
     steps:
