--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,14 @@
 
 		<!-- production dependencies -->
 		<spring-boot.version>3.3.2</spring-boot.version>
-		<spring-ai.version>1.0.0-M1</spring-ai.version>
+		<spring-ai.version>1.0.0-M4</spring-ai.version>
 		<deeplearning4j.version>1.0.0-M2.1</deeplearning4j.version>
 
 		<!-- plugin versions -->
 		<spring-javaformat-maven-plugin.version>0.0.39</spring-javaformat-maven-plugin.version>
 		<maven-site-plugin.version>4.0.0-M13</maven-site-plugin.version>
 		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+		<maven-release-plugin.version>3.0.0-M5</maven-release-plugin.version>
 		<jacoco.version>0.8.12</jacoco.version>
 		<scm.version>2.1.0</scm.version>
 	</properties>
@@ -144,7 +145,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>${maven-release-plugin.version}</version>
 				<configuration>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
