--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "releases/*", "main" ]
   pull_request:
-    branches: [ "releases/*", "main" ]
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   build:
