--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,5 +19,5 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Run tests
+      run: mvn -B clean verify
