--- a/jchunk-recursive-character/pom.xml
+++ b/jchunk-recursive-character/pom.xml
@@ -26,7 +26,11 @@
             <artifactId>jchunk-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.PabloSanchi</groupId>
+            <artifactId>commons</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
